--- a/src/index.html
+++ b/src/index.html
@@ -4,21 +4,29 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Test des critéres RGESN</title>
-    <script type="text/javascript" src="/js/index.js"></script>
-	<link rel="stylesheet" href="/styles/index.css" type="text/css">
-	<link rel="shortcut icon" href="/favicon.ico">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+	<link rel="stylesheet" href="styles/index.css" type="text/css">
+	<link rel="icon" href="img/logo.svg" type="image/svg+xml">
 
 </head>
-<body>
-    <h1>Transformez votre impact digital : Vérifiez les critères d'écoresponsabilité de votre site dès maintenant ! </h1>
-    <div id="main_form" class="controls">
-        <form id="waveform" novalidate>
+<body class=".container-fluid">
+<header class="position-relative container">
+    <a href="#" class="row position-absolute top-0 start-50 translate-middle">
+        <img src="img/logo.svg" id="logo" alt="EcoTest" title="ecotest">
+    </a>
+    <br><br>
+    <h2 class="display-1 fw-bolder" id="talk">Optimisez l'empreinte de votre code</h1>
+    <h3 class="text-gray-soft text-regular">Vérifiez la responsabilité environnementale de votre site dès maintenant !</h5>
+    <div id="main_form" class="controls"> 
+        <form id="" novalidate>
             <label for="input_url">Adresse de votre site internet :</label>
             <br>
             <input id="input_url" type="url" class="control url">
             <input class="control" type="submit" id="button_wave" value="confirm">
         </form>
     </div>
+</header>
+    
     
 </body>
 </html>
